@@ -1,3 +1,8 @@
+2003-11-27  Al Riddoch  <alriddoch@zepler.org>
+
+	* Mercator/Terrain.cpp: Use lrintf or equivalent for clean
+	  fast float-int conversion.
+
 2003-11-03 James Turner <james@worldforge.org>
 
 	* Add ProjectBuilder project, Mercator builds with no
